# MarkUp

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
extras/artwork/: markup.icns
extras/packshell/: builddmg.sh  linux_pack.sh
markup/: config.py  run.py
markup/app/backend/: api.py
markup/app/backend/action/: main.py
markup/app/frontend/: launcher.html  main.html  preview.html
markup/app/frontend/static/css/: demo.css  dialog.css  launcher.css  shared.css
markup/app/frontend/static/js/: demo.js  dialog.js  launcher.js  marked.esm.js  worker.js
markup/app/frontend/static/other/: initial.md  preview.html  quickref.md
markup/app/modules/: toolbar.py
markup/common/: encrypt.py  params.py  temp.py
markup/profiles/: app.ini
