[tool.poetry]
name = "markup"
version = "0.1.0"
description = "markdown 解析器"
authors = ["ayuge <ayugesheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pywebview = "4.4"
toml = "0.10.2"

[tool.poetry.group.dev.dependencies]
pythonnet = [
    {version = "3.0.3", python = "<3.13,>=3.7"},
]
markdown = "^3.4.4"
commonmark = "^0.9.1"
PyInstaller = [
    {version = "6.1.0", python = ">=3.8,<3.13"},
]
flake8 = "6.1.0"
pre-commit = "3.4.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
